# 32-bit-cpu-emulator

./: .gitignore  CMakeLists.txt  README.md
asm-programs/: add.asm  loop.asm
include/: assembler.h  cpu.h  cpu_exec.h  isa.h  log.h  parser.h  ram.h  validation.h
src/: assembler.c  cpu.c  cpu_exec.c  log.c  main.c  parser.c  ram.c  validation.c
